@@ -1,3 +1,4 @@
+ alter  table supplychain_pick_item add identity  int(11) NOT NULL;
 ######## 2014-10-22 ##########
 alter table shop_weixin_user add column created datetime NOT NULL;
 alter table shop_weixin_user add column modified datetime NOT NULL;
